--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#333" />
-<title>Mininxd Downloader</title>
+<title>Terabox Downloader - mininxd</title>
 
 <link rel="stylesheet" href="./css/style.css">
 <script type="module" src="./js/script.js"></script>
