--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div class="fleksibel">
   <br>
-<input id="inputEl" placeholder="https://terabox.com/s/..." class="input is-rounded is-normal is-dark">
+<input id="inputEl" placeholder="https://terabox.com/wap/..." class="input is-rounded is-normal is-dark">
 <button id="fetchLink" class="button is-rounded is-dark">GO</button>
 </div>
 </div>
