--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <div class="form-wrapper">
   
   
-  <form class="control is-flex">
-<input class="input" placeholder="https://terabox.com/wap/..." id="inputURL">
+<form class="is-flex">
+<input id="inputUrl" class="input" placeholder="https://terabox.com/wap/...">
 <button class="button is-dark" id="fetchBtn">GO</button>
 </form>
 </div>
