--- a/index.html
+++ b/index.html
@@ -54,12 +54,16 @@
 
 
 <div id="footer" class="is-hidden footer">
+<a href="https://saweria.co/mininxd">
 <button id="donate" class="button is-small is-dark">
   Saweria
 </button>
+</a>
+<a href="https://whatsapp.com/channel/0029VaieVG35K3zatnIond0s">
 <button id="whatsapp" class="button is-small is-dark">
   Whatsapp
 </button>
+</a>
 <br>
 <center>
 <span>made with ❤️ <br> 2024 - present &copy; mininxd</span>
