--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
 
 </div>
 
+<div class="data-info">
+  <div class="wrapper">
+<span class="item" id="jstoken"></span>
+<span class="item" id="browserid"></span>
+<span class="item" id="cookie"></span>
+<span class="item" id="sign"></span>
+<span class="item" id="timestamp"></span>
+<span class="item" id="shareid"></span>
+<span class="item" id="uk"></span>
+</div>
+</div>
+
 
 <div id="footer" class="is-hidden footer">
 <a href="https://saweria.co/mininxd">
